2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx,
 include/pqxx/internal/gates/icursorstream_icursor_iterator.hxx,
 src/cursor.cxx:
 - Another call gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx,
 include/pqxx/internal/gates/connection-reactivation_avoidance_exemption.hxx,
 src/connection_base.cxx:
 - Set up another call gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/internal/callgate.hxx,
 include/pqxx/internal/*, src/*.cxx:
 - Moved "gate" headers into include/pqxx/internal/gates.
 - Replaced gate-class name suffix with namespace.
 - Extracted common base class for call gates.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx,
 test/unit/test_prepared_statement:
 - Unnamed prepared statements require PQprepare().
 - Bugfix: unnamed prepared statement kept using its first definition.
 include/pqxx/result.hxx:
 - Fix up PQAlloc deletion handling if shared_ptr not available.
 src/connection_base.cxx:
 - Conditionally-compiled code wasn't using the proper gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Substitute full version information.
 doc/Doxyfile.in, src/util.cxx:
 - Make Doxygen see through some cpp macros and such that get in the way.
 - Removed obsolete Doxygen directive DETAILS_AT_TOP.
 src/transaction_base.cxx:
 - gcc 3.3 stumbles over foo_gate(bar).splat()
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Get ABI version as well as library version.
 - Single "substitute" function for configure.ac and version header.
 doc/Doxyfile.in:
 - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
 include/pqxx/result.hxx, include/pqxx/util.hxx src/connection_base.cxx,
 src/util.cxx:
 - Clean up deleter handling in PQAlloc, thanks Kirit Saelensminde.
 - Should fix a case of mismatched allocation/deallocation.